                "aucun collègue enregistré dans votre réseau"

[CORRIGÉ]   -   Quand on supprime une entreprise et qu'ensuite on se connecte à une personne employée dans cette entreprise -> segt fault
                -> rajouter qu'à la suppression d'une entreprise, il faut passer tous ses employes en recherche d'emploi

-   Une personne peut s'auto ajouter dans son réseau de collègue (Mickey est ami avec Mickey, narcissique le gars)






==========================================================================================================================================================================
||  Idées de choses à ajouter / modifier (si vous en faites une, mettez [FAIT] ou [CORRIGÉ] devant le tiret correspondant)
==========================================================================================================================================================================
[FAIT]      -   Le récapitulatif quand on créé un profil personne est incomplet. On peut rajouter la liste des compétences et des collègues

[FAIT]      -   Actuellement quand on veut supprimer un de ses collègues, ça affiche la liste de tous les collègues et si on supprime un collègue qui
                n'est pas notre ami, ça dit "cette personne ne fait pas partie de votre réseau" puis ça revient au menu
                Est ce que ça ne serait pas mieux d'afficher directement QUE les collègues de la personne, et lui demander de choisir celui qu'elle veut virer

[FAIT]      -   Est ce qu'on ne devrait pas tout passer en string pour gérer les entrées de l'utilisateur ? 
                Mais attention les string du C++ (#include <string> pas <string.h>) qui sont beaucoup plus manipulable que ceux du C
                On peut facilement faire des comparaison, des += etc (comme j'ai fait pour statut si vous voulez voir (dans un menu d'une personne par exemple))